<resources>
    <string name="app_name">Money Manager</string>

    <string name="expenses">Expenses</string>
    <string name="income">Income</string>

    <string name="customerIDHint">Customer ID</string>
    <string name="securityNumberHint">Security Number</string>
    <string name="forgottenDetails"><u>Forgotten details?</u></string>
    <string name="incorrectLogin">Incorrect log in details!</string>
    <string name="no_data">No data yet!</string>
    <string name="log_cleared">Log cleared!</string>

    <string-array name="activityHijackflags">
        <item>If you must break the law, do it to seize power: in all other cases observe it.</item>
        <item>Can\'t touch this!</item>
    </string-array>

    <string name="fileStoragePermissionWarning">
        App needs file storage access to read security level!
    </string>
    <string name="storagePermissionAcquired">Storage permission acquired!</string>

    <string-array name="expenseCategories">
        <item>Food</item>
        <item>Bills</item>
        <item>Home</item>
        <item>Transport</item>
        <item>Car</item>
        <item>Clothing</item>
        <item>Insurance</item>
        <item>Tax</item>
        <item>Health</item>
        <item>Childcare</item>
        <item>Sport</item>
        <item>Travel</item>
        <item>Entertainment</item>
    </string-array>

    <string-array name="incomeCategories">
        <item>Salary</item>
        <item>Rental</item>
        <item>Sale</item>
        <item>Grants</item>
        <item>Investments</item>
        <item>Awards</item>
    </string-array>

    <string name="charts">Charts</string>
    <string name="categories">Categories</string>
    <string name="stats">Stats</string>
    <string name="accounts">Accounts</string>
    <string name="settings">Settings</string>
    <string name="export">Export</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="balance">Balance</string>
    <string name="log">Log</string>
    <string name="clear_log">Clear Log</string>
    <string name="swanBankAppName">SwanBank</string>
</resources>