<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"

    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:openDrawer="start">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.AppBarLayout.PrimarySurface"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/mainActivityToolbar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:navigationIcon="@drawable/ic_baseline_menu"
                android:background="@android:color/transparent" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="80dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/moneyCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                card_view:cardCornerRadius="8dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/incomeTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"

                        android:text="@string/income"
                        android:textSize="18sp"

                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/expensesTextView"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/expensesTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"

                        android:text="@string/expenses"
                        android:textSize="18sp"

                        app:layout_constraintStart_toEndOf="@id/incomeTextView"
                        app:layout_constraintEnd_toStartOf="@id/balanceTextView"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/balanceTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"

                        android:text="@string/balance"
                        android:textSize="18sp"

                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/expensesTextView"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/incomeValuetextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"

                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:text="1893"

                        app:layout_constraintStart_toStartOf="@id/incomeTextView"
                        app:layout_constraintEnd_toEndOf="@+id/incomeTextView"
                        app:layout_constraintTop_toBottomOf="@id/incomeTextView" />

                    <TextView
                        android:id="@+id/expensesValuetextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"

                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:text="1202"

                        app:layout_constraintTop_toBottomOf="@id/expensesTextView"
                        app:layout_constraintStart_toStartOf="@id/expensesTextView"
                        app:layout_constraintEnd_toEndOf="@id/expensesTextView"/>

                    <TextView
                        android:id="@+id/balanceValuetextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"

                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:text="691"

                        app:layout_constraintEnd_toEndOf="@id/balanceTextView"
                        app:layout_constraintStart_toStartOf="@id/balanceTextView"
                        app:layout_constraintTop_toBottomOf="@id/balanceTextView" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"

            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"

            android:clickable="true"
            app:srcCompat="@drawable/ic_plus"
            android:focusable="true" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/mainNavigationView"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:layout_gravity="start"

        app:menu="@menu/navigation_drawer"/>

</androidx.drawerlayout.widget.DrawerLayout>